--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,8 +9,99 @@
     tools:context=".MainActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerHorizontal="true"
+        android:text="Welcome to Memory game" />
+    
+    <Button
+        android:id="@+id/b11"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_toLeftOf="@+id/b12"
+        android:layout_marginTop="50dp" />
+    
+    <Button
+        android:id="@+id/b12"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
+    
+    <Button
+        android:id="@+id/b13"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_toRightOf="@+id/b12"
+        android:layout_marginTop="50dp" />
+    
+    <Button
+        android:id="@+id/b21"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b11"
+       	android:layout_toLeftOf="@+id/b22" />
+
+    <Button
+        android:id="@+id/b22"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b12"
+        android:layout_centerHorizontal="true"
+         />
+    
+    <Button
+        android:id="@+id/b23"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_toRightOf="@+id/b22"
+        android:layout_below="@+id/b13" />
+    
+    <Button
+        android:id="@+id/b31"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b21"
+        android:layout_toLeftOf="@+id/b32" />
+
+    <Button
+        android:id="@+id/b32"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b22"
+        android:layout_centerHorizontal="true"/>
+    
+    
+    <Button
+        android:id="@+id/b33"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b23"
+        android:layout_toRightOf="@+id/b32"/>
+    
+    <Button
+        android:id="@+id/b41"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b31"
+        android:layout_toLeftOf="@+id/b42" />
+
+    <Button
+        android:id="@+id/b42"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/b32" />
+
+    <Button
+        android:id="@+id/b43"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:layout_below="@+id/b33"
+        android:layout_toRightOf="@+id/b42" />
+
+
+
 
 </RelativeLayout>
